formik redux added

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,7 @@
 :root {
 	--font-space: "Space Grotesk", sans-serif;
 
+	--active-input-border: linear-gradient(#6448fe, #7906bc);
 	--input-errors: #ff5252;
 	--white: #ffffff;
 	--light-grayish-violet: #dedddf;
