--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,4 @@
-/*abstracs*/
-
-@use "./scss/abstracs/variables";
-@use "./scss/abstracs/mixins";
-
-/*base*/
-
-@use "./scss/base/base";
-@use "./scss/base/resets";
+@use "./scss/base";
+@use "./scss/resets";
+@use "./scss/variables";
+@use "./scss/typography";
