--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -4,6 +4,13 @@
 	margin: 0;
 }
 
+h2 {
+	font-size: 28px;
+	font-weight: 500;
+	text-transform: uppercase;
+	letter-spacing: 3.42px;
+}
+
 h3 {
 	font-size: 18px;
 	font-weight: 500;
@@ -29,6 +36,12 @@ h4,
 h5 {
 	font-size: 12px;
 	font-weight: 500;
+}
+
+p {
+	font-size: 18px;
+	font-weight: 500;
+	color: var(--dark-grayish-violet);
 }
 
 button {
