--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,5 +8,6 @@
 	--white: #ffffff;
 	--light-grayish-violet: #dedddf;
 	--dark-grayish-violet: #8e8593;
+	--deep-violet: #21092f;
 	--very-dark-violet: #21092f;
 }
