--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -33,16 +33,38 @@
 	.form__input {
 		margin-top: 5px;
 		width: 100%;
+		border: 1px solid var(--light-grayish-violet);
+		font-family: var(--font-space);
+		font-size: 18px;
+		font-weight: 500;
+		border-radius: 8px;
 		padding-top: 10px;
 		padding-bottom: 10px;
 		padding-left: 10px;
 		padding-right: 10px;
+		outline: none;
+	}
+
+	.form__input::placeholder {
+		color: var(--deep-violet);
+		opacity: 0.25;
+		font-weight: 500;
+	}
+
+	.form__input:focus {
+		border-color: #7906bc;
 	}
 
 	.form__error__container {
 		height: 21px;
 		margin-top: 2px;
 		margin-bottom: 9px;
+	}
+
+	.form__input__label {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 20px;
 	}
 
 	.form__input__container__mmyy {
@@ -54,10 +76,11 @@
 
 .finalized__container {
 	position: absolute;
-	width: 85%;
+	width: 100%;
+	max-width: 328px;
+	text-align: center;
 	top: 335px;
-	right: 50%;
-	transform: translateX(-50%);
+	right: 24px;
 
 	.finalized__icon {
 		margin-top: 10px;
@@ -71,6 +94,10 @@
 	.finalized__paragragh {
 		margin-bottom: 40px;
 	}
+}
+
+.cards {
+	filter: drop-shadow(0px 39px 60px rgba(0, 0, 0, 0.142481));
 }
 
 .card__container__back,
@@ -117,7 +144,7 @@
 		padding-left: 20px;
 
 		.card__front__bin {
-			margin-bottom: 17px;
+			margin-bottom: 1.06em;
 		}
 
 		.card__front__name__mmyy {
@@ -162,48 +189,67 @@
 
 	.card__container__back {
 		top: 399px;
-		left: 6em;
+		left: 128px;
+
+		.card__back__data {
+			top: 112px;
+			right: 57px;
+		}
 	}
 
 	.card__container__front {
 		top: 120px;
-		left: 3em;
+		left: 48px;
+
+		.card__logo {
+			left: 32px;
+			top: 28px;
+			width: 84px;
+			height: 47px;
+		}
 
 		.card__front__data {
 			max-width: 447px;
 		}
 	}
 
-	.form {
+	.form,
+	.finalized__container {
 		top: 200px;
-		right: 5em;
+		right: 80px;
+	}
+
+	.finalized__container {
+		top: 230px;
 	}
 }
 
 @media screen and (min-width: 1150px) {
 	.card__container__back {
-		left: 10em;
+		left: 190px;
 	}
 
 	.card__container__front {
-		left: 7em;
+		left: 112px;
 	}
 
-	.form {
-		right: 8em;
+	.form,
+	.finalized__container {
+		right: 128px;
 	}
 }
 
 @media screen and (min-width: 1300px) {
 	.card__container__back {
-		left: 13em;
+		left: 240px;
 	}
 
 	.card__container__front {
-		left: 10em;
+		left: 160px;
 	}
 
-	.form {
-		right: 17em;
+	.form,
+	.finalized__container {
+		right: 270px;
 	}
 }
